play button on iphone fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -117,6 +117,10 @@ h5 {
   text-decoration: underline;
 }
 
+.welcome-content a:visited {
+  color: #000;
+}
+
 .contact-button{
   padding-top: 80px;
 }
@@ -402,11 +406,14 @@ textarea.input {
   font-size: 12px;
   color: rgba(100,100,100,1);
   line-height: 1.1;
-  padding:5px 30px 0 10px;
+  padding:5px 10px 0 10px;
+  width: 130px;
 }
 
 .container-contact-form-button{
-    padding-left: 10px;
+  width: 75px;
+  text-align: right;
+
 }
 
 .contact-form-btn-next {
@@ -702,5 +709,29 @@ textarea.input {
   .home-button{
     display: none;
   }
+
+}
+
+*::-webkit-media-controls-panel {
+
+  display: none!important;
+
+  -webkit-appearance: none;
+
+}
+
+*::--webkit-media-controls-play-button {
+
+  display: none!important;
+
+  -webkit-appearance: none;
+
+}
+
+*::-webkit-media-controls-start-playback-button {
+
+  display: none!important;
+
+  -webkit-appearance: none;
 
 }
